<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/recyclerMainLayout"
    android:background="@color/backgroud_light_blue">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerCalendar"
        android:layout_width="match_parent"
        android:layout_height="630dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/monthTV"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="60px"
        app:layout_constraintBottom_toTopOf="@+id/recyclerCalendar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:textAlignment="center"
        android:paddingVertical="5dp"
        android:background="@color/darker_blue"
        app:layout_constraintBottom_toTopOf="@+id/recyclerCalendar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/monthTV">

        <TextView
            android:id="@+id/mondayTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/monday"
            android:textAlignment="center"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tuesdayTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tuesday"
            android:textAlignment="center"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/wednesdayTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wednseday"
            android:textAlignment="center"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/thursdayTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/thursday"
            android:textAlignment="center"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/fridayTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/friday"
            android:textAlignment="center"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/saturdayTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/saturday"
            android:textAlignment="center"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/sundayTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sunday"
            android:textAlignment="center"
            android:textColor="@color/black"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>