<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroud_light_blue">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#3fff"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        tools:layout_editor_absoluteX="90dp"
        tools:layout_editor_absoluteY="137dp">


        <EditText
            android:id="@+id/emailField"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/email_field"
            android:background="@drawable/event_description_box"
            android:inputType="textEmailAddress"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/usernameField"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/username_field"
            android:background="@drawable/event_description_box"
            android:inputType="textPersonName"
            android:textAlignment="center"
            tools:layout_editor_absoluteX="97dp"
            tools:layout_editor_absoluteY="120dp" />

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_margin="10dp"
            android:ems="10"
            android:hint="@string/password_field"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:background="@drawable/event_description_box"
            app:layout_constraintBottom_toTopOf="@+id/loginButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:text="@string/login_button"
            android:textColor="@color/black" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>